[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymakehelper"
version = "0.0.37"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pymakehelper eases writing recipes when using the make system"
readme = "README.md"
license = "MIT"
keywords=[
    "make",
    "scons",
    "gnu-make",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "pylogconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pymakehelper"
"Bug Tracker" = "https://github.com/veltzer/pymakehelper/issues"
"Documentation" = "https://veltzer.github.io/pymakehelper"
"Download" = "https://pypi.org/project/pymakehelper/"
"Repository" = "https://github.com/veltzer/pymakehelper"

[project.scripts]
pymakehelper = "pymakehelper.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pymakehelper"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pymakehelper/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]
